python/testData/highlighting/asyncModuleBuiltinMethods.py
<error descr="Function \"__getattr__\" cannot be async">async</error> def __getattr__(name):
    pass


<error descr="Function \"__dir__\" cannot be async">async</error> def __dir__():
    pass